@@ -4,6 +4,11 @@
 	parameters nbits = 1, winsize = 2. Decrement tabulated values, to
 	better match the > comparison when the table is used.
 
+	* mpn/generic/sec_powm.c (win_size): Comment why we always get
+	win_size(eb) <= eb. Make the table const.
+	(mpn_sec_powm): Deleted handling of winsize > initial ebi. For
+	now, replaced with an ASSERT_ALWAYS.
+
 2014-02-08 Marco Bodrato <bodrato@mail.dm.unipi.it>
 
 	* mini-gmp/mini-gmp.c (mpz_realloc2, mpz_limbs_read, mpz_limbs_modify
